fixed: collection editor, api key usage, swagger doc
